[package]
name = "console-log-saver"
version = "1.3.0-beta.2"
edition = "2021"

[dependencies]
bytemuck = "1.19.0"
byteorder = "1.5.0"
lldb = { git = "https://github.com/endoli/lldb.rs.git", version = "0.0.11", rev = '87d7afc1bcf4da989bceac400c524e6dc0d69169' }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sysinfo = "0.32.0"
tempfile = "3.14.0"
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4"] }
regex = "1.11.1"
whoami = { version = "1.5.2", default-features = false }
home = "0.5.9"
rfd = { version = "0.15.1", optional = true }
sys-locale = { version = "0.3.2", optional = true }
libui = { git = "https://github.com/libui-rs/libui", version = "0.3.0", rev = '07155974', optional = true }
libui-ffi = { git = "https://github.com/libui-rs/libui", version = "0.3.0", rev = '07155974', optional = true }
arboard = { version = "3.4.1", default-features = false, optional = true }
ureq = { version = "2.12.1", default-features = false, features = ["native-certs", "tls"] }
open = "5.3.1"

[[bin]]
name = "ConsoleLogSaverCli"
path = "src/cli.rs"

[[bin]]
name = "ConsoleLogSaverGui"
path = "src/gui.rs"
required-features = ['gui']

[features]
external_debug_server = []
gui = [ "dep:rfd", "dep:sys-locale", "dep:libui", "dep:libui-ffi", "arboard" ]

[workspace]
members = [
    'cls-attach-lib', 
    'monobdwgc-2.0-stub',
]

[patch.crates-io]
lldb-sys = { git = "https://github.com/anatawa12/lldb-sys.rs", branch = "static-link" }
